--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
